# destini

./: .gitignore  CMakeLists.txt  DEPENDENCIES  README.md  build.sh  build_artifacts-all.sh  build_artifacts-android-arm.sh  build_artifacts-android-x86.sh  build_artifacts-hacked.sh  build_artifacts-hacked2.sh  build_artifacts-hacked_dist.sh  build_artifacts-linux-arm.sh  build_artifacts-linux-x86-only.sh  build_artifacts-linux-x86.sh  build_artifacts-orig.sh  build_artifacts_in_docker_image.sh  build_artifacts_in_docker_image_dist.sh  build_specific_artifacts.sh  cc_build_artifacts.sh  clean_artifacts.sh  docker_command.txt  findSh.sh  install.sh  prepare_cmake_modules.sh  prepare_python_utils.sh  push_plugin_to_artifactory.sh  quickbuild.sh  recv_test.sh  send_test.sh  sri-race-plugins.json  stage.sh
cmake/: README.md
cmake/presets/: android_arm64-v8a.json  android_x86_64.json  linux_arm64-v8a.json  linux_x86_64.json
cmake/race/: clang-format.cmake  coverage.cmake  java-format.cmake  lint.cmake  local-targets.cmake  test-targets.cmake  valgrind.cmake  warnings.cmake
config/: jel2_codec.json
docker-compile-image/: Dockerfile  build_image.sh
flickr/: README.md  cafe.txt  decl.txt  type.txt
flickr/sim/: NOTES  config_cp.json  config_flickrsim.json  config_flickrsim_ecc10.json  config_flickrsim_ecc20.json  config_flickrsim_ecc8.json  config_ft_ecc10.json  config_ft_ecc15.json  config_ft_ecc20.json  config_ft_ecc8.json  config_ft_q60.json  config_ft_u12.json  config_ft_u12_ecc10.json  config_ft_u34.json  config_ft_u56.json  config_ft_u56_ecc10.json  config_ft_u56_ecc20.json  config_passthru.json  swil.py
flickr/sim/ffmpeg/: config_ffmpeg1.json  config_ffmpeg1_ecc.json  config_ffmpeg2.json  config_ffmpeg3.json  config_ffmpeg_q1.json
include_reference/race/: Race.h
include_reference/race/common/: ChannelId.h  ChannelProperties.h  ChannelRole.h  ChannelStatus.h  ConnectionStatus.h  ConnectionType.h  Defer.h  EncPkg.h  LinkProperties.h  LinkPropertyPair.h  LinkPropertySet.h  LinkStatus.h  LinkType.h  PackageStatus.h  PackageType.h  PluginConfig.h  PluginResponse.h  RaceEnums.h  RaceExport.h  RaceHandle.h  RaceLog.h  RacePluginExports.h  SendType.h  TransmissionType.h  constants.h
include_reference/race/unified/: IRacePluginComms.h  IRaceSdkCommon.h  IRaceSdkComms.h  SdkResponse.h
plugin/artifacts/linux-arm64-v8a-client/PluginDestini/: manifest.json
plugin/channels/twoSixIndirectComposition/: README.md  docker-compose.yml  generate_configs.py  get_status_of_external_services.sh  start_external_services.sh  stop_external_services.sh
scripts/: _jel2_codec_base.sh  activate_avideo.sh  activate_dash.sh  activate_flickr.sh  activate_imgur.sh  activate_minecraft.sh  activate_minecraft.v1.sh  activate_minecraft.v2.sh  activate_pixelfed.sh  activate_tumblr.sh  deactivate_minecraft.sh  deactivate_minecraft.sh.s  initialize_jel2.sh  jel2_Imgur_codec.sh  jel2_Pixelfed_codec.sh  jel2_Pixelfed_codec_android.sh  jel2_Pixelfed_codec_redis.sh  jel2_Pixelfed_codec_redis_p3.sh  jel2_codec-debug.sh  jel2_decomposed_codec_p3.sh  mjpeg_wedge  to_dash_svr.sh  video_unwedge  video_wedge  video_wedge2  video_wedge_max
scripts/video/: _video_codec_base.sh  initialize_video.sh  video_decomposed_codec.sh
source/: CMakeLists.txt  CMakeLists_v1.txt  CMakeLists_v2.txt  README.md  manifest.json
source/common/: JsonTypes.h  PersistentStorageHelpers.h  base64.cpp  log.cpp  log.h
source/encoding/: CLICodec.cpp  CLICodec.h  CMakeLists.txt  PluginTA2SRICLIEncoding.cpp  PluginTA2SRICLIEncoding.cpp.good  PluginTA2SRICLIEncoding.cpp.hacked  PluginTA2SRICLIEncoding.h  PluginTa2TwoSixBase64Encoding.h  PluginTa2TwoSixStubEncoding.cpp  README.md  codec.json
source/flickr_transport/: CMakeLists.txt  DynamicWords.cpp  DynamicWords.h  FlickrLink.cpp  Link.h  LinkAddress.h  LinkMap.h  PluginTa2SRIFlickrTransport.cpp  PluginTa2SRIFlickrTransport.h  PluginTa2TwoSixStubTransport.cpp  README.md  flickr_transport.c  flickr_transport.h  video_unwedge  video_wedge
source/flickr_transport/flickr_auth/: README  rw_auth.json  user1.ini  user2.ini  user3.ini  user4.ini  user5.ini  user6.ini
source/jel_encoding/: CMakeLists.txt  PluginTA2SRI_JELEncoding.cpp  PluginTA2SRI_JELEncoding.h  PluginTa2TwoSixNoopEncoding.cpp  PluginTa2TwoSixStubEncoding.cpp  tellme.sh
source/mjpg_encoding/: CMakeLists.txt  PluginTA2SRI_MJPGEncoding.cpp  PluginTA2SRI_MJPGEncoding.h  PluginTa2TwoSixBase64Encoding.cpp  PluginTa2TwoSixNoopEncoding.h  PluginTa2TwoSixStubEncoding.cpp  mjpg_codec.json
source/mjpg_simplex/: CMakeLists.txt  Link.h  LinkAddress.cpp  LinkAddress.h  MJPGLink.cpp  MessageHashQueue.h  PluginTa2SRI_MJPG_Simplex.cpp  PluginTa2SRI_MJPG_Simplex.h  PluginTa2TwoSixStubTransport.cpp  PluginTa2TwoSixStubTransport.h  README.md  manifest.json  mjpg_transport.c
source/mjpg_transport/: CMakeLists.txt  MJPGLink.cpp  PluginTa2SRI_MJPG_Transport.cpp  PluginTa2SRI_MJPG_Transport.h  PluginTa2TwoSixStubTransport.cpp  README.md  mjpg_transport.h
source/user-model/: CMakeLists.txt  LinkUserModel.h  MarkovModel.h  PluginTa2TwoSixStubUserModel.cpp  PluginTa2TwoSixStubUserModel.h
source/video_encoding/: CLICodec.cpp  CMakeLists.txt  PluginTA2SRI_VideoEncoding.cpp  PluginTA2SRI_VideoEncoding.h  PluginTa2TwoSixStubEncoding.cpp  manifest.json  video_codec.json  video_codec_with_seed.json
test/source/: CMakeLists.txt  llvm-gcov.sh  main.cpp
test/source/transport/: MockLink.h  TestLink.cpp  TestLinkMap.cpp  TestPluginTa2TwoSixStubTransport.cpp
test/source/user-model/: TestLinkUserModel.cpp  TestMarkovModel.cpp  TestPluginTa2TwoSixStubUserModel.cpp
